# qt6_template_project

./: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/source/: main.cpp
src/Runtime/: CMakeLists.txt  MainWindow.ui
